--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "mongoose": "^7.2.2",
     "nodemon": "^2.0.22"
   }
