--- a/example.env
+++ b/example.env
@@ -9,3 +9,6 @@ DB_CONNECTION= mongodb://<username>:<password>@<host>:<port>/<database>
 
 # DEV => No need to import when using PROD
 DB_CONNECTION_DEV = mongodb://<username>:<password>@<host>:<port>/<database>
+
+# Node Mailer password
+NODE_MAILER_PASSWORD=1234 1234 1234 1234
