--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
     "mongoose": "^7.2.2",
-    "nodemon": "^3.0.1"
+    "nodemailer": "^6.9.6",
+    "nodemailer-express-handlebars": "^6.1.0",
+    "nodemon": "^3.0.1",
+    "path": "^0.12.7"
   }
 }
