--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Backend solution for E-Shop",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "node server.js"
   },
   "repository": {
     "type": "git",
