--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
     "mongoose": "^7.2.2",
