--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/wodosharlatan/Individual-Graduation-Thesis#readme",
   "dependencies": {
+    "@google-cloud/storage": "^7.7.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
