--- a/.gitignore
+++ b/.gitignore
@@ -142,6 +142,11 @@ data
 
 # VSCode files
 .vscode
+
+# Backend files
 backend/routes/new_product/key.json
+backend/routes/products/images
+
+# Frontend files
 frontend/public/API/categories.json
 frontend/public/API/products.json
