--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.1.4",
+    "event-target-shim": "^6.0.2",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
     "fs": "^0.0.1-security",
