--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,14 +14,15 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.20.0",
     "sass": "^1.69.7"
   },
   "devDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.12.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
-    "@rollup/rollup-linux-x64-gnu":"4.12.0",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
