--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,6 @@
     "nodemailer": "^6.9.6",
     "nodemailer-express-handlebars": "^6.1.0",
     "nodemon": "^3.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
   }
 }
