--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.1.4",
     "event-target-shim": "^6.0.2",
-    "express": "^4.18.2",
+    "express": "^4.18.3",
     "express-fileupload": "^1.4.3",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
@@ -37,6 +37,7 @@
     "nodemailer": "^6.9.6",
     "nodemailer-express-handlebars": "^6.1.0",
     "nodemon": "^3.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pdfkit": "^0.14.0"
   }
 }
